force-app/main/default/objects/Pricing_Matrix__c/Pricing_Matrix__c.object-meta.xml
<CustomObject>
    <label>Pricing Matrix</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>