force-app/main/default/objects/Pricing_Matrix__c/fields/Capex_Cost__c.field-meta.xml
<CustomField>
    <fullName>Capex_Cost__c</fullName>
    <label>Capex Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>