force-app/main/default/objects/Pricing_Matrix__c/fields/Discount_start_range__c.field-meta.xml
<CustomField>
    <fullName>Discount_start_range__c</fullName>
    <label>Discount start range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>