force-app/main/default/objects/Pricing_Matrix__c/fields/Installation_Charge__c.field-meta.xml
<CustomField>
    <fullName>Installation_Charge__c</fullName>
    <label>Installation Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>