force-app/main/default/objects/Pricing_Matrix__c/fields/Last_Slab1__c.field-meta.xml
<CustomField>
    <fullName>Last_Slab1__c</fullName>
    <formula>ISBLANK(Range_end_value__c )</formula>
    <label>Last Slab</label>
    <type>Checkbox</type>
</CustomField>