force-app/main/default/objects/Pricing_Matrix__c/fields/Last_Slab__c.field-meta.xml
<CustomField>
    <fullName>Last_Slab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Slab</label>
    <type>Checkbox</type>
</CustomField>