force-app/main/default/objects/Pricing_Matrix__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pricing Matrix</relationshipLabel>
    <relationshipName>Pricing_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>