force-app/main/default/objects/Pricing_Matrix__c/fields/Range_start_value__c.field-meta.xml
<CustomField>
    <fullName>Range_start_value__c</fullName>
    <label>Range start value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>