force-app/main/default/objects/Pricing_Matrix__c/fields/Variable_Charge__c.field-meta.xml
<CustomField>
    <fullName>Variable_Charge__c</fullName>
    <label>Variable Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>