force-app/main/default/objects/Pricing_Matrix__c/recordTypes/Location_Based_Discounting.recordType-meta.xml
<RecordType>
    <fullName>Location_Based_Discounting</fullName>
    <active>true</active>
    <label>Location Based Discounting</label>
</RecordType>