force-app/main/default/objects/Pricing_Matrix__c/recordTypes/Range_Based_Pricing.recordType-meta.xml
<RecordType>
    <fullName>Range_Based_Pricing</fullName>
    <active>true</active>
    <label>Range Based Pricing</label>
</RecordType>