force-app/main/default/objects/Pricing_Matrix__c/recordTypes/Standard_Pricing.recordType-meta.xml
<RecordType>
    <fullName>Standard_Pricing</fullName>
    <active>true</active>
    <label>Standard Pricing</label>
</RecordType>