force-app/main/default/objects/Pricing_Matrix__c/recordTypes/Term_Based_Discounting.recordType-meta.xml
<RecordType>
    <fullName>Term_Based_Discounting</fullName>
    <active>true</active>
    <label>Term Based Discounting</label>
</RecordType>