force-app/main/default/objects/Pricing_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Location__c</columns>
    <columns>Discount__c</columns>
    <columns>Range_start_value__c</columns>
    <columns>Range_end_value__c</columns>
    <columns>Record_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>contains</operation>
        <value>Term_Based</value>
    </filters>
    <label>All</label>
</ListView>